--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "colors": "^1.3.3",
     "express": "^4.16.4",
-    "mysql2": "^1.6.5"
+    "mysql2": "^1.6.5",
+    "path": "^0.12.7"
   }
 }
